--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "md5": "^2.3.0",
     "mongoose": "^5.10.7",
     "mongoose-encryption": "^2.0.2",
+    "mongoose-findorcreate": "^3.0.0",
     "passport": "^0.4.1",
+    "passport-google-oauth": "^2.0.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-local-mongoose": "^6.0.1"
   }
 }
